clusters/seaweedfs-cluster/kyverno/network-policy-jobs.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-job-access
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: kyverno-migrate-resources
      io.kubernetes.pod.namespace: kyverno
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
