clusters/seaweedfs-cluster/kyverno/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-access
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kyverno
      io.kubernetes.pod.namespace: kyverno
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
      - ports:
        - port: "9443"
          protocol: TCP
